# PlateSniper

./: .gitignore  CLAUDE.md  CMakeLists.txt  CODEBUDDY.md  README.md
docs/superpowers/plans/: 2026-04-10-plate-recognition-implementation.md
docs/superpowers/specs/: 2026-04-10-plate-recognition-design.md
src/: main.cpp
src/core/: detection.cpp  detection.h  plate_corrector.cpp  plate_corrector.h  plate_detector.cpp  plate_detector.h  plate_recognizer.cpp  plate_recognizer.h
src/gui/: image_view.cpp  image_view.h  main_window.cpp  main_window.h  result_panel.cpp  result_panel.h
src/models/: model_manager.cpp  model_manager.h  onnx_session.cpp  onnx_session.h
src/utils/: config.cpp  config.h  image_utils.cpp  image_utils.h
tests/: CMakeLists.txt  test_corrector.cpp  test_detection.cpp  test_utils.cpp
